[package]
name = "rusty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib1 = { path = "./lib1", default-features = false}
lib2 = { path = "./lib2", default-features = false }
derive-macro = { path = "derive-macro" }
log = "0.4.17"
serde = { version = '1.0.82', features = ['derive'] }


